fix(docs): align theme with the marketing page

--- a/docs/src/global.css
+++ b/docs/src/global.css
@@ -6,29 +6,31 @@
 https://nextra.site/docs/docs-theme/theme-configuration#theme-color
 */
 
-:root{
+:root {
   --nextra-navbar-height: 60px;
 }
 
 body:is(html[class~="dark"] *),
 html:is(html[class~="dark"] *) {
-  background: #0a0a0a !important;
+  background: #050505 !important;
 }
 
 .nextra-nav-container:is(html[class~="dark"] *) {
-  background: #0a0a0a !important;
+  background: #050505 !important;
+  border-bottom: 0.5px solid rgb(52, 52, 52);
+}
+
+.nextra-nav-container-blur {
+  display: none;
 }
 
 .dark\:_bg-black:is(html[class~="dark"] *) {
-  background-color: #141415 !important;
+  background-color: #050505 !important;
+  border-bottom: 0.5px solid rgb(52, 52, 52);
 }
 
 nav {
   padding: 0 !important;
-}
-
-div:has(aside.nextra-sidebar-container) {
-  margin: 0 auto;
 }
 
 /*.nextra-nav-container + div {*/
@@ -47,13 +49,20 @@ ul._inline-block {
   padding-inline-end: 4rem;
 }
 
-aside.nextra-sidebar-container {
-  padding-inline-start: 1rem;
+aside.nextra-sidebar-container li a {
+  /* Default state */
+  color: #939393;
+}
+
+aside.nextra-sidebar-container li a:hover {
+  /* Default state */
+  color: #fff !important;
 }
 
 aside.nextra-sidebar-container,
 nav.nextra-toc {
-  width: 18rem;
+  width: 226px;
+  padding-inline-end: 0px;
 }
 
 article:has(main) {
@@ -64,10 +73,6 @@ article:has(main) {
 main._max-w-6xl {
   max-width: 70ch;
   margin-inline-start: 0;
-}
-
-a {
-  background: transparent !important;
 }
 
 button._transition:not([title="Copy code"]):is(html[class~="dark"] *),
@@ -94,7 +99,7 @@ div._overflow-y-auto {
   padding-inline-start: 0;
 }
 
-ul._flex {
+/* ul._flex {
   padding-inline-start: 0.375rem !important;
   margin-inline-start: 0 !important;
   padding-block-start: 0 !important;
@@ -106,6 +111,11 @@ ul._flex {
 
 ul._flex > li a {
   padding-inline-start: 0.375rem !important;
+} */
+
+ul._flex {
+  margin-inline-start: 8px !important;
+  padding-inline-start: 0px !important;
 }
 
 button._transition
@@ -174,13 +184,18 @@ pre > * {
 div.nextra-scrollbar {
   gap: 4px;
 }
+
+.nextra-nav-container:is(html[class~="dark"] *) nav a {
+  color: #a9a9a9 !important;
+}
+
 nav a {
   padding-block: 8px;
   padding-inline: 16px;
-  font-size: 14px;
+  font-size: 14px !important;
+  font-weight: 500 !important;
 }
 nav a[aria-current="true"] {
-  font-weight: 400;
   border-radius: 0.375rem;
 }
 
@@ -204,5 +219,41 @@ ul[role="listbox"] {
 }
 
 .nextra-sidebar-footer:is(html[class~="dark"] *) {
-  background: #0a0a0a !important;
+  background: #050505 !important;
+}
+
+/**
+ * 
+ * Not the most exciting override but I don't have other solution that tweaking this thing...
+ */
+._max-w-\[90rem\] {
+  max-width: 1184px !important;
+  width: 100%;
+}
+
+iframe {
+  border-radius: 6px !important;
+  overflow: hidden;
+}
+
+pre {
+  border: 0.5px solid #343434 !important;
+  background: #171717 !important;
+}
+
+.nextra-sidebar-container li a {
+  border-left: 2px solid transparent;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  padding-inline-start: 14px;
+}
+
+.nextra-sidebar-container ul::before {
+  height: calc(100% - 3px);
+}
+
+.dark\:_bg-primary-400\/10:is(html[class~="dark"] *) {
+  background: transparent;
+  color: white;
+  border-left: 2px solid white;
 }
